@@ -1,0 +1,77 @@
+<?php
+// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
+// This file was generated on 2010-04-20 13:44
+
+$extensionPath = t3lib_extMgm::extPath('feuserregister');
+return array(
+	'tx_feuserregister_userregistration_wizicon' => $extensionPath . 'class.tx_feuserregister_userregistration_wizicon.php',
+	'tx_feuserregister_commandresolver' => $extensionPath . 'classes/class.tx_feuserregister_commandresolver.php',
+	'tx_feuserregister_localizationmanager' => $extensionPath . 'classes/class.tx_feuserregister_localizationmanager.php',
+	'tx_feuserregister_mailer' => $extensionPath . 'classes/class.tx_feuserregister_mailer.php',
+	'tx_feuserregister_registry' => $extensionPath . 'classes/class.tx_feuserregister_registry.php',
+	'tx_feuserregister_request' => $extensionPath . 'classes/class.tx_feuserregister_request.php',
+	'tx_feuserregister_sessionregistry' => $extensionPath . 'classes/class.tx_feuserregister_sessionregistry.php',
+	'tx_feuserregister_tcafieldfactory' => $extensionPath . 'classes/class.tx_feuserregister_tcafieldfactory.php',
+	'tx_feuserregister_transformerfactory' => $extensionPath . 'classes/class.tx_feuserregister_transformerfactory.php',
+	'tx_feuserregister_validatorfactory' => $extensionPath . 'classes/class.tx_feuserregister_validatorfactory.php',
+	'tx_feuserregister_command_confirm' => $extensionPath . 'classes/commands/class.tx_feuserregister_command_confirm.php',
+	'tx_feuserregister_command_edit' => $extensionPath . 'classes/commands/class.tx_feuserregister_command_edit.php',
+	'tx_feuserregister_command_register' => $extensionPath . 'classes/commands/class.tx_feuserregister_command_register.php',
+	'tx_feuserregister_abstracttcafield' => $extensionPath . 'classes/tca/class.tx_feuserregister_abstracttcafield.php',
+	'tx_feuserregister_tca_checkboxfield' => $extensionPath . 'classes/tca/class.tx_feuserregister_tca_checkboxfield.php',
+	'tx_feuserregister_tca_inputfield' => $extensionPath . 'classes/tca/class.tx_feuserregister_tca_inputfield.php',
+	'tx_feuserregister_tca_radiofield' => $extensionPath . 'classes/tca/class.tx_feuserregister_tca_radiofield.php',
+	'tx_feuserregister_tca_selectfield' => $extensionPath . 'classes/tca/class.tx_feuserregister_tca_selectfield.php',
+	'tx_feuserregister_tca_textfield' => $extensionPath . 'classes/tca/class.tx_feuserregister_tca_textfield.php',
+	'tx_feuserregister_abstracttransformer' => $extensionPath . 'classes/transformer/class.tx_feuserregister_abstracttransformer.php',
+	'tx_feuserregister_transformer_br2nl' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_br2nl.php',
+	'tx_feuserregister_transformer_date' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_date.php',
+	'tx_feuserregister_transformer_htmlspecialchars' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_htmlspecialchars.php',
+	'tx_feuserregister_transformer_md5' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_md5.php',
+	'tx_feuserregister_transformer_nl2br' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_nl2br.php',
+	'tx_feuserregister_transformer_striptags' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_striptags.php',
+	'tx_feuserregister_transformer_t3sec_saltedpw' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_t3sec_saltedpw.php',
+	'tx_feuserregister_transformer_timestamp' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_timestamp.php',
+	'tx_feuserregister_abstractvalidator' => $extensionPath . 'classes/validators/class.tx_feuserregister_abstractvalidator.php',
+	'tx_feuserregister_validator_age' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_age.php',
+	'tx_feuserregister_validator_between' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_between.php',
+	'tx_feuserregister_validator_blacklist' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_blacklist.php',
+	'tx_feuserregister_validator_boolean' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_boolean.php',
+	'tx_feuserregister_validator_dateformat' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_dateformat.php',
+	'tx_feuserregister_validator_email' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_email.php',
+	'tx_feuserregister_validator_equalfield' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_equalfield.php',
+	'tx_feuserregister_validator_equalvalue' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_equalvalue.php',
+	'tx_feuserregister_validator_float' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_float.php',
+	'tx_feuserregister_validator_int' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_int.php',
+	'tx_feuserregister_validator_ip' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_ip.php',
+	'tx_feuserregister_validator_ipv4' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_ipv4.php',
+	'tx_feuserregister_validator_ipv6' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_ipv6.php',
+	'tx_feuserregister_validator_length' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_length.php',
+	'tx_feuserregister_validator_regexp' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_regexp.php',
+	'tx_feuserregister_validator_required' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_required.php',
+	'tx_feuserregister_validator_uniqueindb' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_uniqueindb.php',
+	'tx_feuserregister_validator_uniqueinpid' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_uniqueinpid.php',
+	'tx_feuserregister_validator_url' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_url.php',
+	'tx_feuserregister_controller_userregistration' => $extensionPath . 'controller/class.tx_feuserregister_controller_userregistration.php',
+	'tx_feuserregister_exception_confirm' => $extensionPath . 'exceptions/class.tx_feuserregister_exception_confirm.php',
+	'tx_feuserregister_exception_database' => $extensionPath . 'exceptions/class.tx_feuserregister_exception_database.php',
+	'tx_feuserregister_exception_field' => $extensionPath . 'exceptions/class.tx_feuserregister_exception_field.php',
+	'tx_feuserregister_exception_stepmanager' => $extensionPath . 'exceptions/class.tx_feuserregister_exception_stepmanager.php',
+	'tx_feuserregister_exception_tca' => $extensionPath . 'exceptions/class.tx_feuserregister_exception_tca.php',
+	'tx_feuserregister_exception_transformer' => $extensionPath . 'exceptions/class.tx_feuserregister_exception_transformer.php',
+	'tx_feuserregister_t3libauth_hook' => $extensionPath . 'hooks/class.tx_feuserregister_t3libauth_hook.php',
+	'tx_feuserregister_interface_command' => $extensionPath . 'interfaces/interface.tx_feuserregister_interface_command.php',
+	'tx_feuserregister_interface_observable' => $extensionPath . 'interfaces/interface.tx_feuserregister_interface_observable.php',
+	'tx_feuserregister_interface_observer' => $extensionPath . 'interfaces/interface.tx_feuserregister_interface_observer.php',
+	'tx_feuserregister_model_abstractstep' => $extensionPath . 'model/class.tx_feuserregister_model_abstractstep.php',
+	'tx_feuserregister_model_dbtable' => $extensionPath . 'model/class.tx_feuserregister_model_dbtable.php',
+	'tx_feuserregister_model_feuser' => $extensionPath . 'model/class.tx_feuserregister_model_feuser.php',
+	'tx_feuserregister_model_field' => $extensionPath . 'model/class.tx_feuserregister_model_field.php',
+	'tx_feuserregister_model_preview' => $extensionPath . 'model/class.tx_feuserregister_model_preview.php',
+	'tx_feuserregister_model_sessionuser' => $extensionPath . 'model/class.tx_feuserregister_model_sessionuser.php',
+	'tx_feuserregister_model_step' => $extensionPath . 'model/class.tx_feuserregister_model_step.php',
+	'tx_feuserregister_model_stepmanager' => $extensionPath . 'model/class.tx_feuserregister_model_stepmanager.php',
+	'tx_feuserregister_model_success' => $extensionPath . 'model/class.tx_feuserregister_model_success.php',
+	'tx_feuserregister_view_error' => $extensionPath . 'view/class.tx_feuserregister_view_error.php',
+);
+?>
