@@ -1,6 +1,7 @@
 2010-04-20  Oliver Hader  <oliver@typo3.org>
 
 	* Added feature: Integrate possibility to return cancel status by observers
+	* Added feature: Integrate ext_autoload.php file for TYPO3 4.3 disposal
 
 2010-04-15  Oliver Hader  <oliver@typo3.org>
 
